--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -15,6 +15,7 @@ WORKDIR /code
 
 #Install pip packages
 RUN pip install --upgrade pip
+RUN pip uninstall -y enum34
 RUN pip install -r requirements.txt
 
 # Install zsh
@@ -54,3 +55,4 @@ RUN chmod -R 755 /usr/local/share/zsh/site-functions
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
 WORKDIR /code
+
